--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,10 @@
+:root {
+    --main-color: white;
+}
+
 body {
     background-color: #151925;
-    color: white;
+    color: var(--main-color);
     font-family: arial;
 }
 .navbar {
@@ -8,29 +12,32 @@ body {
     align-items: center;
     margin: 0;
     padding: 15px 40px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .navbar h2 {
     font-size: 35px;
     font-weight: bolder;
 } 
-nav {
+.nav.links {
     flex: 1;
     text-align: right;
 }
-nav ul li {
+.nav-links ul li {
     list-style-type: none;
     display: inline-block;
     margin-right: 40px;
 }
-nav ul li a,
+.nav-links ul li a,
 .footer-links ul li a{
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
-    color: white;
+    color: var(--main-color);
     transition: transform 0.8sec ease;
+}
+nav .fas {
+    display: none;
 }
 nav ul li a:hover,
 .footer-links ul li a:hover {
@@ -56,7 +63,7 @@ nav ul li a:hover,
     padding: 15px 30px;
     font-size: 23px;
     font-weight: bolder;
-    color: white;
+    color: var(--main-color);
     border-radius: 20px;
     background-color: #10EEEE;
     border: none;
@@ -208,7 +215,7 @@ textarea{
 }
 .footer {
     background-color: #323846;
-    color: white;
+    color: var(--main-color);
     padding: 50px 0;
     margin-top: 3rem;
 }
@@ -245,7 +252,7 @@ textarea{
 }
 
 .footer-links ul li a {
-    color: white;
+    color: var(--main-color);
     text-decoration: none;
 }
 
@@ -344,9 +351,30 @@ textarea{
         text-align: center;
         align-items: center;
     }
-   nav {
-    display: none;
+   .nav-links ul li {
+    display: block;
    }
+   .nav-links {
+    position: fixed;
+    background: #323846;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+}
+    nav .fas {
+    display: block;
+    color: #fcfafa;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+}
+.nav-links ul {
+    padding: 30px;
+}
 }
 @media only screen and (max-width: 1000px){
     .footer-content {
@@ -419,7 +447,7 @@ textarea{
         opacity: 1;
     }
     .content p {
-        color: white;
+        color: var(--main-color);
         font-size: 10px;
     }
     
